--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "babel-loader": "^8.0.5",
     "babel-plugin-module-resolver": "^3.2.0",
     "babel-plugin-styled-components": "^1.10.0",
+    "dotenv-webpack": "^1.7.0",
     "express": "^4.16.4",
     "fork-ts-checker-webpack-plugin": "^1.0.0",
     "nextjs-export-path-map": "^0.1.2",
