--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
     "@types/react": "^16.8.8",
     "@types/react-dom": "^16.8.2",
     "@types/styled-components": "^4.1.12",
+    "@typescript-eslint/eslint-plugin": "^1.4.2",
+    "@typescript-eslint/parser": "^1.4.2",
     "@zeit/next-css": "^1.0.1",
     "@zeit/next-typescript": "^1.1.1",
     "babel-core": "^6.26.3",
@@ -48,6 +50,8 @@
     "babel-loader": "^8.0.5",
     "babel-plugin-module-resolver": "^3.2.0",
     "babel-plugin-styled-components": "^1.10.0",
+    "eslint": "^5.15.2",
+    "eslint-plugin-react-hooks": "^1.5.0",
     "express": "^4.16.4",
     "fork-ts-checker-webpack-plugin": "^1.0.0",
     "nextjs-export-path-map": "^0.1.2",
