--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "babel-loader": "^8.0.5",
     "babel-plugin-module-resolver": "^3.2.0",
     "babel-plugin-styled-components": "^1.10.0",
+    "dotenv-webpack": "^1.7.0",
     "eslint": "^5.15.2",
     "eslint-plugin-react-hooks": "^1.5.0",
     "express": "^4.16.4",
