--- a/package.json
+++ b/package.json
@@ -50,17 +50,20 @@
     "babel-loader": "^8.0.5",
     "babel-plugin-module-resolver": "^3.2.0",
     "babel-plugin-styled-components": "^1.10.0",
+    "dotenv-load": "^1.1.0",
     "dotenv-webpack": "^1.7.0",
     "eslint": "^5.15.2",
     "eslint-plugin-react-hooks": "^1.5.0",
     "express": "^4.16.4",
     "fork-ts-checker-webpack-plugin": "^1.0.0",
+    "next-compose-plugins": "^2.1.1",
+    "next-env": "^1.1.0",
     "nextjs-export-path-map": "^0.1.2",
     "styled-components": "^4.1.3",
     "url": "^0.11.0"
   },
   "scripts": {
-    "dev": "node ./server/index",
+    "dev": "cross-env NODE_ENV=development node ./server/index",
     "build": "next build",
     "start": "next start"
   }
