--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@types/next": "^8.0.1",
     "@types/node": "^10.12.21",
     "@types/react": "^16.8.8",
+    "@types/react-dates": "^17.1.5",
     "@types/react-dom": "^16.8.2",
     "@types/styled-components": "^4.1.12",
     "@typescript-eslint/eslint-plugin": "^1.4.2",
@@ -59,6 +60,7 @@
     "next-compose-plugins": "^2.1.1",
     "next-env": "^1.1.0",
     "nextjs-export-path-map": "^0.1.2",
+    "react-dates": "^20.1.0",
     "styled-components": "^4.1.3",
     "url": "^0.11.0"
   },
@@ -68,3 +70,4 @@
     "start": "next start"
   }
 }
+
