--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@babel/plugin-proposal-class-properties": "^7.1.0",
     "@babel/plugin-proposal-export-default-from": "^7.0.0",
     "@babel/plugin-transform-runtime": "^7.2.0",
+    "@babel/plugin-transform-typescript": "^7.3.2",
     "@babel/preset-env": "^7.1.5",
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-typescript": "^7.1.0",
@@ -57,6 +58,7 @@
     "eslint-plugin-react-hooks": "^1.5.0",
     "express": "^4.16.4",
     "fork-ts-checker-webpack-plugin": "^1.0.0",
+    "moment": "^2.24.0",
     "next-compose-plugins": "^2.1.1",
     "next-env": "^1.1.0",
     "nextjs-export-path-map": "^0.1.2",
@@ -70,4 +72,3 @@
     "start": "next start"
   }
 }
-
