--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "axios": "^0.18.0",
     "body-parser": "^1.18.3",
     "cross-env": "^5.2.0",
+    "downshift": "^3.2.7",
     "jest": "^24.5.0",
     "jest-styled-components": "^6.3.1",
     "js-cookie": "^2.2.0",
