--- a/package.json
+++ b/package.json
@@ -6,9 +6,12 @@
     "body-parser": "^1.18.3",
     "cross-env": "^5.2.0",
     "downshift": "^3.2.7",
+    "husky": "^1.3.1",
     "jest": "^24.5.0",
+    "jest-runner-eslint": "^0.7.3",
     "jest-styled-components": "^6.3.1",
     "js-cookie": "^2.2.0",
+    "lint-staged": "^8.1.5",
     "lodash": "^4.17.11",
     "next": "^8.0.3",
     "prettier": "^1.16.4",
@@ -58,6 +61,12 @@
     "dotenv-webpack": "^1.7.0",
     "eslint": "^5.15.2",
     "eslint-plugin-react-hooks": "^1.5.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-import-resolver-typescript": "^1.1.1",
+    "eslint-plugin-import": "^2.12.0",
+    "eslint-plugin-jest": "^21.17.0",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-react": "^7.9.1",
     "express": "^4.16.4",
     "fork-ts-checker-webpack-plugin": "^1.0.0",
     "moment": "^2.24.0",
@@ -72,5 +81,16 @@
     "dev": "cross-env NODE_ENV=development node ./server/index",
     "build": "next build",
     "start": "next start"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged --debug"
+    }
+  },
+  "lint-staged": {
+    "*.js": [
+      "eslint --fix",
+      "git add"
+    ]
   }
 }
