--- a/package.json
+++ b/package.json
@@ -60,13 +60,13 @@
     "dotenv-load": "^1.1.0",
     "dotenv-webpack": "^1.7.0",
     "eslint": "^5.15.2",
-    "eslint-plugin-react-hooks": "^1.5.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-import-resolver-typescript": "^1.1.1",
     "eslint-plugin-import": "^2.12.0",
     "eslint-plugin-jest": "^21.17.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.9.1",
+    "eslint-plugin-react-hooks": "^1.5.0",
     "express": "^4.16.4",
     "fork-ts-checker-webpack-plugin": "^1.0.0",
     "moment": "^2.24.0",
@@ -78,7 +78,7 @@
     "url": "^0.11.0"
   },
   "scripts": {
-    "dev": "cross-env node ./server/index .env .env.development",
+    "dev": "node ./server/index .env.development",
     "build": "next build",
     "start": "next start"
   },
